--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "ejs": "^2.5.8",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "rpio": "^0.9.22"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
